# boggle-solver

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  highest_scoring_board.txt  sample_board.txt  twl06.txt.xz
benches/: perf1.rs
boggle-board-maker/: Cargo.toml  IN_INSTALL  Makefile  README.md
boggle-board-maker/src/: lib.rs
boggle-solver-ffi/: .gitignore  Cargo.toml  Makefile  README.md
boggle-solver-ffi/example/: csolve.c
boggle-solver-ffi/python/: boggle_solve.c  setup.py
boggle-solver-ffi/src/: boggle_solver.h  lib.rs
docs/: 20190805_Tries_in_Rust.md  20190807_Bitmapping_in_Rust.md  20190812_Solving_Boggle.md  20190816_Solving_Boggle_Multithreaded.md  20190820_Boggle_C_FFI.md  triegraph.dot
prototype/: boggle_solver.py
src/: board.rs  dict.rs  ledger.rs  ledger_large.rs  lib.rs  main.rs  solve.rs  solve_threaded.rs  trie.rs
tests/: tests.rs
