[package]
name = "boggle-solver"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"

[features]
large_board = ["fsbitmap"]

[dependencies]
clap = "2.33.0"
regex = "1"
crossbeam = "0.7.2"
crossbeam-deque = "0.7.1"
num_cpus = "1.10.1"
fsbitmap = { version = "0.1.0", git = "https://github.com/elfsternberg/fsbitmap-rs", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "perf1"
harness = false

[profile.release]
debug = false

[lib]
name = "boggle_solver"
path = "src/lib.rs"

