[package]
name = "boggle-solver"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
description = "Boggle™ Automatic Solver"
repository = "https://github.com/elfsternberg/boggle-solver"
readme = "./README.md"

[features]
large_board = ["fsbitmap"]
threaded = ["crossbeam", "crossbeam-deque", "num_cpus"]
slow_board = []

[dependencies]
itertools = "0.8.0"
clap = "2.33.0"
regex = "1"

fsbitmap = { version = "0.1.0", git = "https://github.com/elfsternberg/fsbitmap-rs", optional = true }
crossbeam = { version = "0.7.2", optional = true }
crossbeam-deque = { version = "0.7.1", optional = true }
num_cpus = { version = "1.10.1", optional = true }

[dev-dependencies]
tempfile = "3.0.7"
criterion = "0.2"
assert_cmd = "0.11.0"
predicates = "1.0.0"

[[bench]]
name = "perf1"
harness = false

[profile.release]
debug = true

[lib]
name = "boggle_solver"
path = "src/lib.rs"

