[package]
name = "boggle-generator"
version = "0.2.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
description = "Boggle board generator function and binary"
repository = "https://github.com/elfsternberg/boggle-solver/"
readme = "./README.md"

[dependencies]
rand = "0.7.0"
clap = "2.33.0"